[package]
name = "bazbom-php-reachability"
version = "6.5.0"
edition = "2021"
authors = ["BazBOM Contributors"]
description = "PHP reachability analysis for BazBOM vulnerability scanning"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-php = "0.24"
tracing = "0.1"
walkdir = "2"
petgraph = "0.8"

[dev-dependencies]
tempfile = "3"
