[package]
name = "bazbom-policy"
version = "6.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regorus = { version = "0.5", optional = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
rego = ["regorus"]

