[package]
name = "bazbom-polyglot"
version = "6.5.0"
edition = "2021"
authors = ["BazBOM Contributors"]
description = "Polyglot ecosystem support for Node.js, Python, Go, Rust, and more"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Lockfile parsers
cargo-lock = "9.0"  # Rust Cargo.lock parser
serde_yaml = "0.9"  # YAML parsing
toml = "0.9"  # Python poetry.lock TOML parser

# HTTP client for OSV API
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

# BazBOM core
bazbom-core = { path = "../bazbom-core", version = "6.0.0" }

# Reachability analyzers
bazbom-rust-reachability = { path = "../bazbom-rust-reachability" }
bazbom-ruby-reachability = { path = "../bazbom-ruby-reachability" }
bazbom-php-reachability = { path = "../bazbom-php-reachability" }
bazbom-go-reachability = { path = "../bazbom-go-reachability" }
bazbom-python-reachability = { path = "../bazbom-python-reachability" }
bazbom-js-reachability = { path = "../bazbom-js-reachability" }

# File system
walkdir = "2.5"
glob = "0.3"

# Async
tokio = { version = "1", features = ["process", "io-util"] }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["macros", "rt"] }
