[package]
name = "bazbom-reachability"
version = "6.6.0"
edition = "2021"
license = "MIT"
description = "Multi-language reachability analysis for BazBOM"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
walkdir = "2"
petgraph = "0.8"

# Java reachability
classfile-parser = "0.3"
dirs = "5.0"

# Rust reachability
syn = { version = "2", features = ["full", "visit"] }
toml = "0.9"

# Tree-sitter for AST-based languages
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
# Java uses bytecode analysis
# Go and Rust use their own parsing methods

# Optional tracing setup (for debugging)
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = []
tracing-support = ["tracing-subscriber"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tracing-subscriber = "0.3"
